--- a/Modacity/Modacity/ViewController/Notes/PracticeNoteCell.xib
+++ b/Modacity/Modacity/ViewController/Notes/PracticeNoteCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,17 +21,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PracticeNoteCell" customModule="Modacity" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="374" height="92"/>
+            <rect key="frame" x="0.0" y="0.0" width="374" height="247"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="374" height="92"/>
+                <rect key="frame" x="0.0" y="0.0" width="374" height="247"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D4N-9t-pTa">
-                        <rect key="frame" x="5" y="5" width="364" height="82"/>
+                        <rect key="frame" x="5" y="5" width="364" height="237"/>
                     </imageView>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dj5-yW-ulj" customClass="VerticalCenterTextView" customModule="Modacity" customModuleProvider="target">
-                        <rect key="frame" x="20" y="15" width="334" height="49"/>
+                        <rect key="frame" x="20" y="15" width="334" height="204"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
                         <color key="textColor" red="0.58823529411764708" green="0.59215686274509804" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
@@ -39,8 +39,36 @@
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES" shipmentTrackingNumber="YES" flightNumber="YES" lookupSuggestion="YES"/>
                     </textView>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0IX-71-AI4">
+                        <rect key="frame" x="20" y="20" width="329" height="199"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EVH-Dv-HmE">
+                                <rect key="frame" x="32" y="0.0" width="265" height="199"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="EVH-Dv-HmE" secondAttribute="height" multiplier="4:3" id="KLq-ih-eFe"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_video_white" translatesAutoresizingMaskIntoConstraints="NO" id="0PD-cV-YpP">
+                                <rect key="frame" x="142.5" y="77.5" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="Bci-8F-M5J"/>
+                                    <constraint firstAttribute="width" secondItem="0PD-cV-YpP" secondAttribute="height" id="LLr-6h-YxF"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="0PD-cV-YpP" firstAttribute="centerX" secondItem="0IX-71-AI4" secondAttribute="centerX" id="FNP-fg-odz"/>
+                            <constraint firstItem="EVH-Dv-HmE" firstAttribute="centerX" secondItem="0IX-71-AI4" secondAttribute="centerX" id="JTe-V4-roA"/>
+                            <constraint firstItem="EVH-Dv-HmE" firstAttribute="top" secondItem="0IX-71-AI4" secondAttribute="top" id="UNe-xp-BZY"/>
+                            <constraint firstItem="0PD-cV-YpP" firstAttribute="centerY" secondItem="0IX-71-AI4" secondAttribute="centerY" id="Vmi-e5-cB3"/>
+                            <constraint firstItem="EVH-Dv-HmE" firstAttribute="centerY" secondItem="0IX-71-AI4" secondAttribute="centerY" id="fXE-MU-nyp"/>
+                            <constraint firstAttribute="bottom" secondItem="EVH-Dv-HmE" secondAttribute="bottom" id="pJr-p0-UUK"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9 / 24 / 18" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7a-jA-ast">
-                        <rect key="frame" x="20" y="66" width="44.5" height="16"/>
+                        <rect key="frame" x="20" y="221" width="44.5" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="6sS-TT-ZJX"/>
                         </constraints>
@@ -74,32 +102,39 @@
                 </subviews>
             </view>
             <constraints>
+                <constraint firstItem="0IX-71-AI4" firstAttribute="trailing" secondItem="D4N-9t-pTa" secondAttribute="trailing" constant="-20" id="43c-Ny-zQe"/>
                 <constraint firstItem="Dj5-yW-ulj" firstAttribute="trailing" secondItem="D4N-9t-pTa" secondAttribute="trailing" constant="-15" id="Crd-yE-E9S"/>
                 <constraint firstItem="c7a-jA-ast" firstAttribute="bottom" secondItem="D4N-9t-pTa" secondAttribute="bottom" constant="-5" id="Dig-6c-1w1"/>
                 <constraint firstAttribute="trailing" secondItem="D4N-9t-pTa" secondAttribute="trailing" constant="5" id="INM-JN-fsJ"/>
                 <constraint firstItem="Dj5-yW-ulj" firstAttribute="leading" secondItem="D4N-9t-pTa" secondAttribute="leading" constant="15" id="JKx-K8-pJq"/>
                 <constraint firstItem="Dj5-yW-ulj" firstAttribute="top" secondItem="D4N-9t-pTa" secondAttribute="top" constant="10" id="MML-P1-PDm"/>
                 <constraint firstItem="Ndx-60-mUf" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" constant="15" id="cLw-rg-cp0"/>
+                <constraint firstItem="0IX-71-AI4" firstAttribute="leading" secondItem="D4N-9t-pTa" secondAttribute="leading" constant="15" id="cUQ-BU-1Q9"/>
+                <constraint firstItem="c7a-jA-ast" firstAttribute="top" secondItem="0IX-71-AI4" secondAttribute="bottom" constant="2" id="ewn-jf-3r8"/>
                 <constraint firstItem="Ndx-60-mUf" firstAttribute="top" secondItem="ZTg-uK-7eu" secondAttribute="top" constant="10" id="hDk-Gj-h8r"/>
                 <constraint firstItem="c7a-jA-ast" firstAttribute="top" secondItem="Dj5-yW-ulj" secondAttribute="bottom" constant="2" id="iPr-yH-ybP"/>
                 <constraint firstItem="c7a-jA-ast" firstAttribute="leading" secondItem="Dj5-yW-ulj" secondAttribute="leading" id="icQ-UJ-wMp"/>
                 <constraint firstItem="D4N-9t-pTa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="mRV-fo-DNj"/>
                 <constraint firstAttribute="bottom" secondItem="D4N-9t-pTa" secondAttribute="bottom" constant="5" id="mSU-vn-cy3"/>
                 <constraint firstItem="D4N-9t-pTa" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="vkR-es-brO"/>
+                <constraint firstItem="0IX-71-AI4" firstAttribute="top" secondItem="D4N-9t-pTa" secondAttribute="top" constant="15" id="xwo-W5-Fgt"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="374" height="92"/>
+            <size key="customSize" width="374" height="247"/>
             <connections>
                 <outlet property="constraintBodyTopSpace" destination="MML-P1-PDm" id="kxd-XM-qpu"/>
                 <outlet property="imageViewBackground" destination="D4N-9t-pTa" id="3P9-DM-tpl"/>
+                <outlet property="imageViewYoutube" destination="EVH-Dv-HmE" id="tgU-3O-zrh"/>
                 <outlet property="labelTime" destination="c7a-jA-ast" id="FRY-Pn-ixt"/>
                 <outlet property="textViewNote" destination="Dj5-yW-ulj" id="lqR-fX-UXv"/>
                 <outlet property="viewImprovementHeader" destination="Ndx-60-mUf" id="dgn-1k-Z9c"/>
+                <outlet property="viewYoutube" destination="0IX-71-AI4" id="E29-eP-GXi"/>
             </connections>
-            <point key="canvasLocation" x="185.59999999999999" y="72.863568215892059"/>
+            <point key="canvasLocation" x="185.59999999999999" y="142.57871064467767"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="icon_note_improvement" width="17" height="16"/>
+        <image name="icon_video_white" width="40" height="40"/>
     </resources>
 </document>
